--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.6"
   }
